--- a/docs/team/lumos309.adoc
+++ b/docs/team/lumos309.adoc
@@ -47,6 +47,10 @@ T.A.rence is a module and class management system aimed at teaching assistants (
 
 * Lists of students, tutorials, and modules scrollable using "PageUp" and "PageDown" keys, maintaining CLI-only interaction [https://github.com/AY1920S1-CS2103-T14-2/main/pull/187[PR #187]]
 
+=== Other Contributions
+
+* Tests to sustain codebase integrity, e.g. [https://github.com/AY1920S1-CS2103-T14-2/main/pull/105[PR #105]], [https://github.com/AY1920S1-CS2103-T14-2/main/pull/196[PR #196]]
+
 _All code contributed:
 [link:https://github.com/AY1920S1-CS2103-T14-2/main/commits/master?author=lumos309[Commits]],
 [link:https://github.com/AY1920S1-CS2103-T14-2/main/pulls?utf8=%E2%9C%93&q=is%3Apr+author%3Alumos309+[Pull Requests]],
@@ -60,7 +64,9 @@ _All code contributed:
 |_Given below are sections I contributed to the User Guide. They showcase my ability to write documentation targeting end-users._
 |===
 
-* [https://github.com/AY1920S1-CS2103-T14-2/main/blob/master/docs/UserGuide.adoc#enhancements[Enhancements]]
+=== _Enhancements (Autocorrect, Autocomplete, Command History)_
+
+include::../UserGuide.adoc[tag=enhancements]
 
 * Parts of the [https://github.com/AY1920S1-CS2103-T14-2/main/blob/master/docs/UserGuide.adoc#3-features[main features]]
 
@@ -70,8 +76,24 @@ _All code contributed:
 |_Given below are sections I contributed to the Developer Guide. They showcase my ability to write technical documentation and the technical depth of my contributions to the project._
 |===
 
-* System Design: [https://github.com/AY1920S1-CS2103-T14-2/main/blob/master/docs/DeveloperGuide.adoc#Design-Logic[Logic Component]]
+=== _System Design - Logic Component_
 
-* Enhancements: [https://github.com/AY1920S1-CS2103-T14-2/main/blob/master/docs/DeveloperGuide.adoc#autocomplete-feature[Autocomplete]], [https://github.com/AY1920S1-CS2103-T14-2/main/blob/master/docs/DeveloperGuide.adoc#autocorrect-feature[Autocorrect]]
+include::../DeveloperGuide.adoc[tag=logic]
+
+=== _Enhancements - Autocomplete & Autocorrect_
+
+include::../DeveloperGuide.adoc[tag=autocomplete]
+
+include::../DeveloperGuide.adoc[tag=autocorrect]
+
+=== _Use Cases_
+
+include::../DeveloperGuide.adoc[tag=UseCaseAddTutorial]
+
+include::../DeveloperGuide.adoc[tag=UseCaseDeleteTutorial]
+
+include::../DeveloperGuide.adoc[tag=UseCaseAddStudent]
+
+include::../DeveloperGuide.adoc[tag=UseCaseMarkAttendance]
 
 * Parts of [https://github.com/AY1920S1-CS2103-T14-2/main/blob/master/docs/DeveloperGuide.adoc#appendix-c-use-cases[Appendix C: Use Cases]]
