--- a/docs/DeveloperGuide.adoc
+++ b/docs/DeveloperGuide.adoc
@@ -70,7 +70,7 @@ The _Sequence Diagram_ below shows how the components interact with each other f
 image::ArchitectureSequenceDiagram.png[]
 
 The sections below give more details of each component.
-
+// tag::ui[]
 [[Design-Ui]]
 === UI component
 
@@ -87,7 +87,8 @@ The `UI` component,
 
 * Executes user commands using the `Logic` component.
 * Listens for changes to `Model` data so that the UI can be updated with the modified data.
-
+// end::ui[]
+// tag::logic[]
 [[Design-Logic]]
 === Logic component
 
@@ -112,7 +113,8 @@ image::DeleteSequenceDiagram.png[]
 NOTE: The lifeline for `DeleteCommandParser` should end at the destroy marker (X) but due to a limitation of PlantUML, the lifeline reaches the end of diagram.
 
 Besides these main commands, `Logic` also handles autocorrect and autocomplete functions in response to user input. These are described in sections 3.1 and 3.2 respectively.
-
+// end::logic[]
+// tag::model[]
 [[Design-Model]]
 === Model component
 
@@ -129,7 +131,8 @@ The `Model`,
 * exposes an unmodifiable `ObservableList<Tutorial>` that can be 'observed'
 * exposes an unmodifiable `ObservableList<Module>` that can be 'observed'
 * does not depend on any of the other three components.
-
+// end::model[]
+// tag::storage[]
 [[Design-Storage]]
 === Storage component
 
@@ -157,7 +160,7 @@ correspond to the module object. Ie there are no tutorials or student objects wh
 module object.
 
 Future versions of storage will support saving of Assignment objects.
-
+// end::storage[]
 [[Design-Commons]]
 === Common classes
 
@@ -255,7 +258,7 @@ When a valid option is selected, the `execute()` method in `SelectSuggestionComm
 image::AutocorrectSequence.png[]
 
 NOTE: The lifelines for `SelectSuggestionCommand` and `AddStudentCommand` should end at their destroy markers (X) but due to a limitation of PlantUML, the lifelines reach the end of diagram.
-
+// end::autocorrect[]
 // tag::autocomplete[]
 === Autocomplete feature
 
@@ -273,7 +276,7 @@ Autocomplete is implemented at the `Parser` level. When the user presses the "TA
 `AutocompleteHandler#handle` is responsible for determining the correct autofilled string. If the user presses "TAB" multiple times successively, it cycles through the available autofill options; otherwise, it gets the list of options from `PartialInputParser` and returns the first one. The activity flow is summarised below:
 
 image::AutocompleteActivity.png[]
-
+// end::autocomplete[]
 // tag::list[]
 === list feature
 
@@ -294,7 +297,7 @@ image::ListCommandActivityDiagram.png[]
 The sequence diagram below shows the interaction with the Logic components as described above.
 
 image::ListCommandSequenceDiagram.png[]
-
+// end::list[]
 // tag::Mark Attendance Feature[]
 === Mark Attendance feature
 
@@ -329,7 +332,7 @@ The sequence diagram below shows the interaction between the Logic componenents 
 image::MarkAttendanceSequenceDiagram.png[]
 
 Entering the input will call the execute() method in LogicManager, which identifies the command as a MarkAttendanceCommand via ApplicationParser.parse(). MarkAttendanceCommand.parse() is then called to parse the input and extract the relevant information (tutorial name, module code, student name) which is used to initialize the MarkAttendanceCommand, which finally modifies the student's attendance when executed.
-
+// end::Mark Attendance Feature[]
 // tag::undoredo[]
 === Undo/Redo feature
 ==== Implementation
@@ -447,7 +450,7 @@ image::UndoRedoState4.png[]
 The following activity diagram summarizes what happens when a user executes a new command:
 
 image::CommitActivityDiagram.png[]
-
+// end::undoredo[]
 ==== Design Considerations
 
 ===== Aspect: How undo & redo executes
@@ -580,7 +583,7 @@ _{More to be added}_
 == Use Cases
 
 (For all use cases below, the *System* is the `T.A.rence application` and the *Actor* is the `TA user`, unless specified otherwise)
-
+// tag::UseCaseAddModule[]
 [discrete]
 === Use case: New module entry
 *Pre-conditions*: User selects the command to add a new module.
@@ -604,7 +607,8 @@ Use case ends.
 ** 1b1. System shows an error message showing the correct format to add a module.
 +
 User case ends.
-
+// end::UseCaseAddModule[]
+// tag::UseCaseAddTutorial[]
 [discrete]
 === Use case: New tutorial entry
 Precondition: User selects the command to add a new tutorial.
@@ -642,7 +646,8 @@ Use case ends.
 ** 1c1. System shows an error message showing the correct format to add a module.
 +
 User case ends.
-
+// end::UseCaseAddTutorial[]
+// tag::UseCaseDeleteTutorial[]
 [discrete]
 === Use case: Deleting tutorials
 *Precondition*: User selects the command to delete a tutorial.
@@ -672,7 +677,8 @@ Use case ends.
 ** 1c2. User confirms the delete action.
 +
 Use case resumes from step 2.
-
+// end::UseCaseDeleteTutorial[]
+// tag::UseCaseAddStudent[]
 [discrete]
 === Use case: New student entry
 *Precondition*: User selects the command to add a new student.
@@ -711,8 +717,8 @@ Use case ends.
 ** 1d1. System shows an error message showing the correct format to add a module.
 +
 User case ends.
-
-
+// end::UseCaseAddStudent[]
+// tag::UseCaseEditStudent[]
 [discrete]
 === Use case: Editing a student's particulars
 *Precondition*: User selects the command to edit a student.
@@ -736,8 +742,8 @@ Use case ends.
 ** 1b1. System shows an error message showing the correct format to add a module.
 +
 User case ends.
-
-
+// end::UseCaseEditStudent[]
+// tag::UseCaseDeleteStudent[]
 [discrete]
 === Use case: Deleting a student
 *Preconditions:*
@@ -764,7 +770,8 @@ Use case ends.
 ** 1b1. System shows an error message showing the correct format to add a module.
 +
 User case ends.
-
+// end::UseCaseDeleteStudent[]
+// tag::UseCaseListStudents[]
 [discrete]
 === Use case: Listing students
 *Preconditions:*
@@ -791,7 +798,8 @@ User case ends
 ** 1b1. System shows an error message showing the correct format to add a module.
 +
 User case ends.
-
+// end::UseCaseListStudents[]
+// tag::UseCaseMarkAttendance[]
 [discrete]
 === Use case: Mark class attendance.
 *Preconditions:*
@@ -822,8 +830,8 @@ Use case ends.
 ** 1b1. System shows an error message showing the correct format to add a module.
 +
 User case ends.
-
-
+// end::UseCaseMarkAttendance[]
+// tag::UseCaseAddHours[]
 [discrete]
 === Use case: Adding in hours clocked.
 *Preconditions:*
@@ -856,7 +864,8 @@ Use case ends.
 ** 1c1. System shows an error message showing the correct format to add a module.
 +
 User case ends.
-
+// end::UseCaseAddHours[]
+// tag::UseCaseAddViewAssignScore[]
 === Use case: Adding and viewing assignment score to students
 *Preconditions*
 
@@ -880,6 +889,7 @@ User case ends.
 ** Steps 2-2a2 are repeated for all invalid students.
 +
 Use case resumes at step 2
+// end::UseCaseAddViewAssignScore[]
 
 _{More to be added soon. Stay tuned!}_
 
