--- a/docs/DeveloperGuide.adoc
+++ b/docs/DeveloperGuide.adoc
@@ -199,8 +199,8 @@ image::AnnotationPackageClassDiagram.png[Annotation Package Class Diagram, 350]
 The above diagram shows the structure of the Annotation package, which is accessed by `ModelManager` via `OfflineDocument`.
 An `OfflineDocument` consists of zero or more `Paragraph` objects, which are each identified by a `ParagraphIdentifier`.
 A `Paragraph` can either be a `TrueParagraph`, which has a `ParagraphContent` and zero or one `Annotation`,
-or a `PhantomParagraph`, which has no `ParagraphContent` but must have an `Annotation`.
-An `Annotation` consists of a `Highlight` and an `AnnotationNote`.
+or a `PhantomParagraph`, which has no `ParagraphContent` but must have an `Annotation` with an `AnnotationNote`.
+In general, an `Annotation` consists of a `Highlight` and an `AnnotationNote`.
 
 NOTE: More details regarding the implementation of Annotations can be found in <<Annotation feature>>.
 
@@ -1476,13 +1476,50 @@ Details of the two restored `delete` actions shown in the status message.
 .. Other incorrect `redo` commands to try: `redo`, `redo x` (where x is larger than the maximum number of actions to redo)  +
    Expected: Similar to previous.
 
-==== Exporting data
+==== Exporting Mark data
 
-// TODO
+. Exporting data to a valid file
+.. Prerequisites: None. However, the expected outcome is written with the assumption that `mark.jar` is opened
+from a folder named [applicationHome] (replace this with the name of the folder that `mark.jar` is in).
+(Also, note that if a file named `myBookmarks.json` already exists in the folder `[applicationHome]/data/bookmarks/`,
+it will be overwritten.)
+.. Test case 1 (success): `export myBookmarks` +
+Expected outcome: A file named `myBookmark.json` is created in the folder `[applicationHome]/data/bookmarks/`.
+(You will have to use your File Explorer/ bash (Windows)/ Finder/ terminal (Mac) to confirm this.)
+The file is identical to the `mark.json` file in the folder `[applicationHome]/data/`. This can be checked by
+using the `diff` utility on your laptop's command line, or copying-and-pasting both files into
+https://www.diffchecker.com/ to compare them.
 
-==== Importing data
+. Other test cases you can copy-and-paste
+.. Test case 2 (error): `export myBookmarks.json` +
+Expected outcome: The application shows an error message indicating that the provided file name should not include
+the `.json` file extension.
 
-// TODO
+==== Importing bookmarks
+
+You may have to manipulate data in Mark or in the exported `.json` files to observe different results when
+importing bookmarks.
+
+. Attempting to import bookmarks from a file that does not contain new bookmarks
+.. Prerequisites: Test case 1 from the manual instructions for <<Exporting data, exporting data>> has been
+successfully completed. No changes to bookmarks have been made.
+.. Test case 1 (success): `import myBookmarks` +
+Expected outcome: The application shows a message indicating that no new bookmarks have been imported. A list of
+duplicate bookmarks is also provided.
+
+. Importing bookmarks from a file that contains some new bookmarks
+.. Prerequisites: A valid data file `myBookmarks.json` exists in the folder `[applicationHome]/data/bookmarks`.
+Some bookmarks have been deleted since `export myBookmarks` was executed (e.g. `delete 4`, `delete 5`, `delete 6`).
+.. Test case 2 (success): `import myBookmarks` +
+Expected outcome: The deleted bookmarks have been added to the bottom of the bookmark list, and they are in the
+correct folders. A folder named `ImportedBookmarks` has also been created.
+
+. Importing bookmarks into an empty Mark
+.. Prerequisites: Mark is empty. You can do this by executing the `clear` command. (Don't worry, as long as you
+do not exit the application, you will be able to recover your data later using `undo`.) Also, a valid data file named
+`myBookmarks.json` should exist in the folder `[applicationHome]/data/bookmarks`.
+.. Test case 3 (success): `import myBookmarks` +
+Expected outcome: All the bookmarks have been imported to the folder `ImportedBookmarks`.
 
 === Testing of folders
 
